all-pass deal is implemented